@@ -1,5 +1,9 @@
-2007-05-15  Eitan Isaacson  <eitan@ascender.com>
+2007-05-16  Eitan Isaacson  <eitan@ascender.com>
 
+	* plugins/console.py: Epydoced.
+	* plugins/ipython_view.py: Epydoced.
+	* plugins/script_recorder.py: Epydoced.
+	
 	* plugins/api_view.py: Epydoced.
 	* plugins/event_monitor.glade: Reattached signals that got lost.
 	* plugins/event_monitor.py:  Epydoced.
